--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 * {
     font-family: Arial, Helvetica, sans-serif;
@@ -14,8 +15,20 @@ header {
     background-color: black;
 }
 
-header > img {
-    width: 30%;
+.logo {
+    text-align: center;
+
+}
+
+.logo > img {
+    width: 60%;
+    padding-top: 20px;
+}
+
+.logo > p {
+    color: #F2A81D;
+    font-family: 'Bebas Neue', cursive;
+    padding-bottom: 20px;
 }
 
 span#burguer {
