--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,11 +8,11 @@
 }
 
 body, html {
-    background-color: black;
+    background-color: #040708;
 }
 
 header {
-    background-color: black;
+    background-color: #040708;
 }
 
 .logo {
@@ -82,7 +82,7 @@ menu > ul > li > a{
     text-decoration: none;
     text-align: center;
     background-color: rgb(87, 87, 87);
-    border: 2px solid gray;
+    border: none;
 }
 
 menu > ul > li > a:hover{
